--- a/CanvasDragNDrop/Windows/BlockModelCreationWindow/BlockModelCreationWindow.xaml
+++ b/CanvasDragNDrop/Windows/BlockModelCreationWindow/BlockModelCreationWindow.xaml
@@ -1,14 +1,16 @@
-﻿<Window xmlns:UserItems="clr-namespace:CanvasDragNDrop.UserItems"  x:Class="CanvasDragNDrop.BlockModelCreationWindow"
+﻿<Window xmlns:UserItems="clr-namespace:CanvasDragNDrop.UserItems"  
+        x:Class="CanvasDragNDrop.BlockModelCreationWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CanvasDragNDrop"
+        xmlns:classes="clr-namespace:CanvasDragNDrop.Windows.BlockModelCreationWindow.Classes"
         mc:Ignorable="d"
         x:Name="Window1"
         Title="Создание модели блока" Width="800" Height="800">
     <Window.DataContext>
-        <local:BlockModelCreationClass/>
+        <classes:BlockModelCreationClass/>
     </Window.DataContext>
     <Grid>
         <TabControl>
@@ -43,8 +45,8 @@
                                     <ItemsControl.ItemTemplate>
                                         <DataTemplate>
                                             <StackPanel Background="#FFE4E4E4" Margin="10,5,10,5">
-                                            <Grid>
-                                                <Grid.ColumnDefinitions>
+                                                <Grid>
+                                                    <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="2*"/>
                                                         <ColumnDefinition Width="45"/>
                                                     </Grid.ColumnDefinitions>
@@ -183,7 +185,7 @@
                                 </ItemsControl>
 
 
-                                <Button Background="#E7E7E7" Content="Добавить параметр по умолчанию" Margin="10,0,10,0" Padding="3" Click="AddDefaultParametres"/>
+                                <Button Background="#E7E7E7" Content="Добавить параметр по умолчанию" Margin="10,0,10,0" Padding="3" Click="AddDefaultParameters"/>
 
                                 <Label Content="Дополнительные переменные" FontSize="18" VerticalAlignment="Center"/>
                                 <ItemsControl ItemsSource="{Binding ExtraParameters}">
@@ -219,10 +221,11 @@
                                         <DataTemplate>
                                             <Border Padding="10,0,10,5">
                                                 <UserItems:BaseExpression 
-                                        Exp="{Binding Expression, Mode=TwoWay}"
-                                        ExpOrder="{Binding Order,Mode=TwoWay}"
-                                        DefinedVariable="{Binding DefinedVariable,Mode=TwoWay}"
-                                        NeededVars="{Binding NeededVariables,Mode=TwoWay}"
+                                                    Exp="{Binding Expression, Mode=TwoWay}"
+                                                    ExpOrder="{Binding Order,Mode=TwoWay}"
+                                                    ExpressionType="{Binding UIExpressionType}"
+                                                    DefinedVariable="{Binding DefinedVariable,Mode=TwoWay}"
+                                                    NeededVars="{Binding NeededVariables,Mode=TwoWay}"
                                                     DeleteExpressionEvent="DeleteExpression"
                                                     MoveUpExpressionEvent="MoveUpExpression"
                                                     MoveDownExpressionEvent="MoveDownExpression"/>
@@ -303,7 +306,6 @@
                                         </DataTemplate>
                                     </ItemsControl.ItemTemplate>
                                 </ItemsControl>
-                                <!--<Button Background="#E7E7E7" Content="Подготовить параметры" Click="PrepareCalculationsVars" Margin="10,10,10,0" Padding="3" FontSize="16"/>-->
                                 <Button Name="CalcBTN" Background="#E7E7E7" Content="{Binding CalcButtonText}" IsEnabled="{Binding CalcButtonAvailable}" Click="CalculateModel" Margin="10,10,10,0" Padding="3" FontSize="16" FontWeight="Bold"/>
                             </StackPanel>
                         </Border>
