--- a/CanvasDragNDrop/Windows/BlockModelCreationWindow/UserItems/BaseExpressionViewer.xaml
+++ b/CanvasDragNDrop/Windows/BlockModelCreationWindow/UserItems/BaseExpressionViewer.xaml
@@ -4,11 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CanvasDragNDrop.UserItems"
+             x:Name="BaseExpressionVieverUserItem"
              mc:Ignorable="d" d:DesignWidth="800">
     <StackPanel Background="#FFE4E4E4">
         <WrapPanel Margin="10,5,10,0">
             <Label Content="Номер выражения:" VerticalAlignment="Center"/>
-            <Label VerticalAlignment="Center" Content="{Binding ExpOrder, RelativeSource={RelativeSource AncestorType=UserControl}}" Width="50"/>
+            <Label VerticalAlignment="Center" Content="{Binding ExpOrder, RelativeSource={RelativeSource AncestorType=UserControl}}" Width="50" FontWeight="Bold"/>
         </WrapPanel>
         <Border Background="White" Padding="5" Margin="10,0,10,10">
             <Grid>
@@ -22,7 +23,18 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <Label Content="Используемые переменные:" Grid.Row="0" Grid.Column="0" HorizontalContentAlignment="Right"/>
-                <Label Content="{Binding NeededVars, RelativeSource={RelativeSource AncestorType=UserControl}}" VerticalAlignment="Center" Margin="0,0,10,0" Grid.Column="1" Grid.ColumnSpan="2"/>
+                <ItemsControl ItemsSource="{Binding NeededVars,ElementName=BaseExpressionVieverUserItem}" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel Margin="0,0,0,0"></WrapPanel>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Label Content="{Binding}" Margin="0" Padding="5,5,0,5"/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
                 <Label Content="{Binding DefinedVariable, RelativeSource={RelativeSource AncestorType=UserControl}}" VerticalAlignment="Center" Margin="10,0,0,0" Grid.Row="1" Grid.Column="0" HorizontalContentAlignment="Right"/>
             <Label Content="=" HorizontalContentAlignment="Center" Grid.Row="1" Grid.Column="1"/>
                 <Label Content="{Binding Exp, RelativeSource={RelativeSource AncestorType=UserControl}}" VerticalAlignment="Center" Margin="0,0,10,0" MinWidth="170" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="3"/>
