--- a/CanvasDragNDrop/Windows/ModelsExplorer/ModelsExplorer.xaml
+++ b/CanvasDragNDrop/Windows/ModelsExplorer/ModelsExplorer.xaml
@@ -26,7 +26,7 @@
                         <TreeViewItem.Header>
                             <StackPanel Orientation="Horizontal">
                                 <Image Source="/Resources/model.png" Width="15"/>
-                                <Label Content="Конденсатор" Padding="0" Margin="5,0,0,0"/>
+                                <Label Content="Конденсатор (V2)" Padding="0" Margin="5,0,0,0"/>
                             </StackPanel>
                         </TreeViewItem.Header>
                     </TreeViewItem>
@@ -34,7 +34,7 @@
                         <TreeViewItem.Header>
                             <StackPanel Orientation="Horizontal">
                                 <Image Source="/Resources/model.png" Width="15"/>
-                                <Label Content="Котёл (V3)" Padding="0" Margin="5,0,0,0"/>
+                                <Label Content="Котёл (V2)" Padding="0" Margin="5,0,0,0"/>
                             </StackPanel>
                         </TreeViewItem.Header>
                     </TreeViewItem>
@@ -43,7 +43,7 @@
                     <TreeViewItem.Header>
                         <StackPanel Orientation="Horizontal">
                             <Image Source="/Resources/model.png" Width="15"/>
-                            <Label Content="Турбина" Padding="0" Margin="5,0,0,0"/>
+                            <Label Content="Турбина (V2)" Padding="0" Margin="5,0,0,0"/>
                         </StackPanel>
                     </TreeViewItem.Header>
                 </TreeViewItem>
@@ -51,7 +51,7 @@
                     <TreeViewItem.Header>
                         <StackPanel Orientation="Horizontal">
                             <Image Source="/Resources/model.png" Width="15"/>
-                            <Label Content="Насос" Padding="0" Margin="5,0,0,0"/>
+                            <Label Content="Насос (V2)" Padding="0" Margin="5,0,0,0"/>
                         </StackPanel>
                     </TreeViewItem.Header>
                 </TreeViewItem>
