--- a/CanvasDragNDrop/Windows/ModelsExplorer/ModelsExplorer.xaml
+++ b/CanvasDragNDrop/Windows/ModelsExplorer/ModelsExplorer.xaml
@@ -4,19 +4,30 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CanvasDragNDrop.Windows.ModelsExplorer"
+        xmlns:src="clr-namespace:CanvasDragNDrop.APIClases" 
         mc:Ignorable="d"
         Title="Каталог моделей" Height="450" Width="300"
         Name="ModelExplorerWindow">
     <Grid>
         <TreeView  ItemsSource="{Binding ElementName=ModelExplorerWindow, Path=AvailableCatalogModels}">
-            <TreeView.ItemTemplate>
-                <HierarchicalDataTemplate ItemsSource="{Binding Childs}">
-                    <StackPanel Orientation="Horizontal">
-                        <Image Source="/Resources/folder.png" Width="15"/>
-                        <Label Content="{Binding CatalogName}" Padding="0" Margin="5,0,0,0"/>
-                    </StackPanel>
+            <TreeView.Resources>
+                <HierarchicalDataTemplate DataType="{x:Type src:APIDirBlockModelClass}" ItemsSource="{Binding Items}">
+                    <ContentControl MouseDoubleClick="FolderDoubleClicked" Tag="{Binding CatalogId}">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="/Resources/folder.png" Width="15"/>
+                            <Label Content="{Binding CatalogName}" Padding="0" Margin="5,0,0,0"/>
+                        </StackPanel>
+                    </ContentControl>
                 </HierarchicalDataTemplate>
-            </TreeView.ItemTemplate>
+                <DataTemplate DataType="{x:Type src:APIBlockModelClass}">
+                    <ContentControl MouseDoubleClick="ModelDoubleClicked" Tag="{Binding ModelId}">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="/Resources/model.png" Width="15"/>
+                            <Label Content="{Binding Title}" Padding="0" Margin="5,0,0,0"/>
+                        </StackPanel>
+                    </ContentControl>
+                </DataTemplate>
+            </TreeView.Resources>
 
 
             <!--
