--- a/CanvasDragNDrop/Windows/MainWindow/AlternateMainWindow.xaml
+++ b/CanvasDragNDrop/Windows/MainWindow/AlternateMainWindow.xaml
@@ -57,7 +57,7 @@
                 <Canvas.RenderTransform>
                     <MatrixTransform x:Name="transform"/>
                 </Canvas.RenderTransform>
-                <ItemsControl ItemsSource="{Binding Schema.BlockInstances}" AlternationCount="{Binding Schema.BlockInstances.Count}">
+                <ItemsControl ItemsSource="{Binding Scheme.BlockInstances}" AlternationCount="{Binding Scheme.BlockInstances.Count}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <Canvas/>
@@ -85,7 +85,7 @@
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
-                <ItemsControl ItemsSource="{Binding Schema.BlockInterconnections}">
+                <ItemsControl ItemsSource="{Binding Scheme.BlockInterconnections}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <Canvas/>
